# cloud-build-function-template

./: .gitignore  README.md  cookiecutter.json  prerequisites.md  pyproject.toml  scrap.ipynb  tools.md  working_with_private_forks.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: make_env_from_cookiecutter_json.py
tests/: cookiecutter_test.py  logging_config.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  cloudbuild.yaml  pyproject.toml  setup.py
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: ci_test.yaml
{{cookiecutter.project_name}}/_local/: .env
{{cookiecutter.project_name}}/scripts/: setup.sh  setup_script.py
{{cookiecutter.project_name}}/scripts/check_accounts/: check_gcloud_CLI.sh  check_github_account_CLI.sh  check_github_repo_CLI.sh
{{cookiecutter.project_name}}/scripts/gcloud_setup/: connect_github_via_connection.sh  create_artifact_registry_repo.sh  create_artifact_repository.sh  create_build_trigger.sh  create_github_connection.sh  setup_secret.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  gcp_functions.py  github_functions.py  main.py  setup_cloud_function.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/cloud_infra/: config.py  cookiecutter_inputs.py  gcp.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/cloud_infra_setup/: config.py  gcp.py
{{cookiecutter.project_name}}/tests/: __init__.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.project_slug}}/: __init__.py  gcp_functions_test.py  main_test.py  setup_cloud_function_test.py  smoke_test.py
{{cookiecutter.project_name}}/tests/test_{{cookiecutter.project_slug}}/cloud_infra/: gcp_test.py
