[project]
name = "cloud-build-function-template"
dynamic = ["version"]
description = "This is a template you can use to create a Cloud Function in GCP with CI/CD through the managed service Google Cloud Build."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "google-api-python-client>=2.162.0",
    "google-cloud-build>=3.31.0",
    "google-cloud-iam>=2.18.1",
    "google-cloud-resource-manager>=1.14.1",
    "google-cloud-secret-manager>=2.23.1",
    "jinja2>=3.1.5",
    "pygithub>=2.6.1",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.1",
    "setuptools-scm>=8.2.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
]

[tool.basedpyright]
ignore = ['tests/', '{{cookiecutter.project_name}}/tests/test_{{cookiecutter.project_slug}}']
reportUnnecessaryComparison = "none" # triggered by templatized strings
reportUninitializedInstanceVariable="none"
